--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@layer base {
+  html,
+  body {
+    font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  }
 }
+
+@layer components {
+  .input {
+    @apply p-2 bg-gray-200 rounded;
+  }
+
+  .input:disabled {
+    @apply cursor-not-allowed 
+  }
+
+  .label {
+    @apply mb-1 font-medium;
+  }
+}
+
